@startuml


package "window" {
    class Widget{
        paint(Graphics)
        handleKeyEvent(int, int, char): boolean
        handleMouseEvent(int, int ,int): boolean
        isBlocking(): boolean
    }
    UIWindowHandler "1" --> "0...*" Widget: has



    class LabelWidget{
    }
    LabelWidget --|> Widget


    class EditorWidget{
    }
    EditorWidget --|> LabelWidget

    class CheckBoxWidget{
    }
    CheckBoxWidget --|> Widget
    class ButtonWidget{
    }
    ButtonWidget --|> LabelWidget



    class UIWindowHandler{
    __Responsibilities__
        managing windows
    }

    class TablesWindow{
    __Responsibilities__
        generating tables window widgets
    }
    class TableDesignWindow{
    __Responsibilities__
        generating table design window widgets
    }
    class TableRowsWindow{
    __Responsibilities__
        generating table rows window widgets
    }
}
    UIWindowHandler "1" --> "1" TablesWindow: manages
    UIWindowHandler "1" --> "1" TableDesignWindow: manages
    UIWindowHandler "1" --> "1" TableRowsWindow: manages

    TablesWindow "1" --> "0...*" Widget: has
    TableDesignWindow "1" --> "0...*" Widget: has
    TableRowsWindow "1" --> "0...*" Widget: has




package "tablr" {
TablesWindow "1" --> "1" TableHandler:  communicates
    TableDesignWindow "1" --> "1" TableDesignHandler:  communicates
    TableRowsWindow "1" --> "1" TableRowsHandler:  communicates


    class TableHandler{

    }


    class TableDesignHandler{

    }

    class TableRowsHandler{


    }

}
@enduml